--- a/views/company_views.xml
+++ b/views/company_views.xml
@@ -1,82 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <!-- COMPANY - LIST SEARCH VIEW -->
+    <record id="view_res_company_filter" model="ir.ui.view">
+        <field name="name">res.company.search</field>
+        <field name="model">res.company</field>
+        <field name="arch" type="xml">
+            <search>
+                <filter string="IVA Responsable Inscripto" name="resp_inscripto" domain="[('l10n_ar_afip_responsibility_type_id.id', '=', 1)]" />
+                <filter string="Monotributista" name="monotributo" domain="[('l10n_ar_afip_responsibility_type_id.id', '=', 4)]" />
+                <filter string="IVA Exento" name="exento" domain="[('l10n_ar_afip_responsibility_type_id.id', '=', 6)]" />
+
+                <!-- TODO: para agrupar por Condicion Fiscal, se debe guardar en la tabla company -->            
+                <!-- <group expand="0" string="Agrupar Por">
+                    <filter string="Condición Fiscal" name="responsibility_type" domain="[]" context="{'group_by': 'l10n_ar_afip_responsibility_type_id'}"/>
+                </group> -->
+            </search>
+        </field>
+    </record>
+
+
+    <!-- COMPANY - LIST VIEW -->
     <record model="ir.ui.view" id="res_company_list_view">
         <field name="name">pyme_accounting.res.company.tree</field>
         <field name="model">res.company</field>
         <field name="arch" type="xml">
             <tree>
                 <field name="name" />
+                <field name="vat" string="CUIT" />
+                <field name="l10n_ar_afip_responsibility_type_id" string="Condición Fiscal" />
                 <field name="phone" />
                 <field name="email" />
-                <field name="vat" />
-                <field name="l10n_ar_afip_responsibility_type_id" />
-                <field name="l10n_ar_gross_income_type" />
-                <field name="l10n_ar_gross_income_number" />
-                <!-- TODO: Fecha de inicio de actividades, mes de cierre ejercicio fiscal -->
-                <!-- TODO: l10n_ar_afip_start_date -->
+                <field name="l10n_ar_gross_income_type" string="Tipo IIBB" />
+                <field name="l10n_ar_gross_income_number" string="Número IIBB" />
             </tree>
         </field>
     </record>
 
+    <!-- COMPANY - FORM VIEW -->
     <record model="ir.ui.view" id="res_company_list_form">
         <field name="name">pyme_accounting.res.company.form</field>
         <field name="model">res.company</field>
         <field name="priority">1</field>
         <field name="arch" type="xml">
-            <form string="Compañía" modifiers="{}">
-                <sheet modifiers="{}">
+            <form string="Compañía">
+                <sheet>
                     <field name="logo" widget="image" class="oe_avatar" modifiers="{}" id="logo"/>
                     <field name="partner_gid" invisible="True" modifiers="{'invisible':true,'readonly':true}" id="partner_gid"/>
-                    <div class="oe_title" modifiers="{}">
-                        <label for="name" class="oe_edit_only" modifiers="{}"/>
-                        <h1 modifiers="{}">
-                            <!-- <field name="name" widget="field_partner_autocomplete" modifiers="{'required':true}" id="name"/> -->
+
+                    <div class="oe_title">
+                        <label for="name" class="oe_edit_only"/>
+                        <h1>
                             <field name="name" modifiers="{'required':true}" id="name"/>
                         </h1>
                     </div>
-                    <notebook colspan="4" modifiers="{}">
-                        <page string="Información General" name="general_info" modifiers="{}">
-                            <group modifiers="{}">
-                                <group modifiers="{}">
-                                    <!-- TODO: tal vez es necesario definir un contacto si es inscripto -->
-                                    <field name="partner_id" invisible="1" string="Contacto" readonly="1" required="0" on_change="1" can_create="true" can_write="true" modifiers="{'readonly':true}" id="partner_id"/>
-                                    <label for="street" string="Dirección" modifiers="{}"/>
-                                    <div class="o_address_format" modifiers="{}">
-                                        <field name="street" placeholder="Calle" class="o_address_street" modifiers="{}" id="street"/>
-                                        <field name="street2" placeholder="Número" class="o_address_street" modifiers="{}" id="street2"/>
-                                        <field name="city" placeholder="Ciudad" class="o_address_city" modifiers="{}" id="city"/>
-                                        <field name="state_id" class="o_address_state" placeholder="Provincia" options="{'no_open': True}" on_change="1" can_create="true" can_write="true" modifiers="{}" id="state_id"/>
-                                        <field name="zip" placeholder="C.P." class="o_address_zip" modifiers="{}" id="zip"/>
-                                        <field name="country_id" placeholder="País" class="o_address_country" options="{'no_open': True}" on_change="1" can_create="true" can_write="true" modifiers="{}" id="country_id"/>
-                                        <field name="country_code" invisible="1" modifiers="{'invisible':true,'readonly':true}" id="country_code"/>
-                                    </div>
-                                    <field name="phone" class="o_force_ltr" modifiers="{}" id="phone"/>
-                                    <field name="email" modifiers="{}" id="email"/>
-                                    <field name="website" string="Sitio web" widget="url" placeholder="e.j. https://www.odoo.com" modifiers="{}" id="website"/>
-                                </group>
-                                <group modifiers="{}">
-                                    <field name="vat" string="CUIT" required="1" modifiers="{}" id="vat"/>
-                                    <field name="l10n_ar_afip_responsibility_type_id" required="1" options="{'no_open': True, 'no_create': True}" attrs="{'invisible': [('country_code', '!=', 'AR')]}" can_create="false" can_write="false" modifiers="{'invisible':[['country_code','!=','AR']]}" id="l10n_ar_afip_responsibility_type_id"/>
-                                    <label for="l10n_ar_gross_income_number" attrs="{'invisible': [('country_code', '!=', 'AR')]}" modifiers="{'invisible':[['country_code','!=','AR']]}"/>
-                                    
-                                    <!-- TODO: Agregar actividades en AFIP-->
-                                    <div attrs="{'invisible': [('country_code', '!=', 'AR')]}" name="gross_income" modifiers="{'invisible':[['country_code','!=','AR']]}">
-                                        <field name="l10n_ar_gross_income_type" class="oe_inline" modifiers="{}" id="l10n_ar_gross_income_type"/>
-                                        <field name="l10n_ar_gross_income_number" placeholder="Número..." class="oe_inline" attrs="{'invisible': [('l10n_ar_gross_income_type', 'in', [False, 'exempt'])], 'required': [('l10n_ar_gross_income_type', 'not in', [False, 'exempt'])]}" modifiers="{'invisible':[['l10n_ar_gross_income_type','in',[false,'exempt']]],'required':[['l10n_ar_gross_income_type','not in',[false,'exempt']]]}" id="l10n_ar_gross_income_number"/>
-                                    </div>
-                                    <field name="l10n_ar_afip_start_date" attrs="{'invisible': [('country_code', '!=', 'AR')]}" modifiers="{'invisible':[['country_code','!=','AR']]}" id="l10n_ar_afip_start_date"/>
-                                    <!-- <field name="company_registry" modifiers="{}" id="company_registry"/> -->
-                                    <!-- <field name="currency_id" options="{'no_create': True, 'no_open': True}" id="company_currency" context="{'active_test': False}" can_create="true" can_write="true" modifiers="{'required':true}"/> -->
-                                    <!-- <field name="parent_id" can_create="true" can_write="true" modifiers="{}" id="parent_id"/> -->
-                                    <field name="sequence" invisible="1" modifiers="{'invisible':true}" id="sequence"/>
-                                    <!-- <field name="favicon" widget="image" class="float-left oe_avatar" modifiers="{}" id="favicon"/> -->
-                                    <!-- <field name="firm_client" /> -->
-                                </group>
-                                <group name="social_media" modifiers="{}"/>
-                            </group>
-                        </page>
-                    </notebook>
+
+                    <group string="AFIP" col="4">
+                        <field name="vat" string="CUIT" required="1" id="vat"/>
+                        <field name="l10n_ar_afip_responsibility_type_id" string="Condición Fiscal" required="1" options="{'no_open': True, 'no_create': True}" attrs="{'invisible': [('country_code', '!=', 'AR')]}" can_create="false" can_write="false" modifiers="{'invisible':[['country_code','!=','AR']]}" id="l10n_ar_afip_responsibility_type_id"/>
+                        <field name="l10n_ar_afip_start_date" attrs="{'invisible': [('country_code', '!=', 'AR')]}" modifiers="{'invisible':[['country_code','!=','AR']]}" id="l10n_ar_afip_start_date"/>
+                    
+                        <!-- TODO: Agregar actividades en AFIP -->
+                        <!-- https://serviciosweb.afip.gob.ar/genericos/nomencladorActividades/index.aspx -->
+                        <!-- <separator /> -->
+                        <!-- <field name="main_activity_id" colspan="3" /> -->
+                    </group>
+
+                    <!-- TODO: Solo habilitar para Monotributo -->
+                    <group string="Monotributo" col="4">
+                        <field name="monotributo_category" string="Categoria" />
+                        <field name="monotributo_type" string="Tipo" />
+                    </group>
+
+                    <group string="Ingresos Brutos">
+
+                        <label for="l10n_ar_gross_income_number" attrs="{'invisible': [('country_code', '!=', 'AR')]}" modifiers="{'invisible':[['country_code','!=','AR']]}"/>
+                        <div attrs="{'invisible': [('country_code', '!=', 'AR')]}" name="gross_income" modifiers="{'invisible':[['country_code','!=','AR']]}">
+                            <field name="l10n_ar_gross_income_type" class="oe_inline" id="l10n_ar_gross_income_type"/>
+                            
+                            <!-- TODO: dejar siempre visible, como readonly si no es multilateral. y borrar con exento/null -->
+                            <field name="l10n_ar_gross_income_number" placeholder="Número..." class="oe_inline" attrs="{'invisible': [('l10n_ar_gross_income_type', 'in', [False, 'exempt'])], 'required': [('l10n_ar_gross_income_type', 'not in', [False, 'exempt'])]}" modifiers="{'invisible':[['l10n_ar_gross_income_type','in',[false,'exempt']]],'required':[['l10n_ar_gross_income_type','not in',[false,'exempt']]]}" id="l10n_ar_gross_income_number"/>
+                        </div>
+
+                    </group>
+
+                    <group string="Otros Datos">
+                        <group>
+                            <!-- TODO: tal vez es necesario definir un contacto si es inscripto -->
+                            <field name="partner_id" invisible="1" string="Contacto" readonly="1" required="0" on_change="1" can_create="true" can_write="true" modifiers="{'readonly':true}" id="partner_id"/>
+                            <label for="street" string="Dirección"/>
+                            <div class="o_address_format">
+                                <field name="street" placeholder="Calle" class="o_address_street" id="street"/>
+                                <field name="street2" placeholder="Número" class="o_address_street" id="street2"/>
+                                <field name="city" placeholder="Ciudad" class="o_address_city" id="city"/>
+                                <field name="state_id" class="o_address_state" placeholder="Provincia" options="{'no_open': True}" on_change="1" can_create="true" can_write="true" id="state_id"/>
+                                <field name="zip" placeholder="C.P." class="o_address_zip" id="zip"/>
+                                <field name="country_id" placeholder="País" class="o_address_country" options="{'no_open': True}" on_change="1" can_create="true" can_write="true" id="country_id"/>
+                                <field name="country_code" invisible="1" modifiers="{'invisible':true,'readonly':true}" id="country_code"/>
+                            </div>
+                        </group>
+                        <group>
+                            <field name="phone" class="o_force_ltr" id="phone"/>
+                            <field name="email" id="email"/>
+                            <field name="website" string="Sitio web" widget="url" placeholder="e.j. https://www.odoo.com" id="website"/>
+
+                            <field name="sequence" invisible="1" modifiers="{'invisible':true}" id="sequence"/>
+                        </group>
+                    </group>
+
+                    <!-- TODO: Agregar Notas -->
                 </sheet>
             </form>
         </field>
